package dsbproto.execution_controller;

import "model.proto";
import "net.proto";


message VariableSetting
{
    required uint32 variable_id = 1;
    optional model.ScalarValue value = 2;
    optional model.Variable connected_output = 3;
}


message SetSimulationTimeArgs
{
    required double start_time = 1;
    required double stop_time = 2;
}

message AddSlaveArgs
{
    required net.SlaveLocator slave_locator = 1;
    required int32 timeout_ms = 2;
}

message AddSlaveReturn
{
    required uint64 slave_id_future_ptr = 1;
}

message SetVariablesArgs
{
    required uint32 slave_id = 1;
    repeated VariableSetting variable_setting = 2;
    required int32 timeout_ms = 3;
}

message SetVariablesReturn
{
    required uint64 future_ptr = 1;
}

message StepArgs
{
    required double step_size = 1;
    required int32 timeout_ms = 2;
}

message StepReturn
{
    enum StepResult
    {
        STEP_FAILED = 0;
        STEP_COMPLETE = 1;
    }
    message SlaveResult
    {
        required uint32 slave_id = 1;
        required StepResult result = 2;
    }

    required StepResult result = 1;
    repeated SlaveResult slave_result = 2;
}

message AcceptStepArgs
{
    required int32 timeout_ms = 1;
}
